--- a/views/chefdashboard.ejs
+++ b/views/chefdashboard.ejs
@@ -77,11 +77,11 @@
                         <div id="pizza-new-forminputs">
                             <div>
                                 <h3 id="type-indicator">New Pizza Name</h3>
-                                <input type="text" name="name" placeholder="Name" maxlength="20">
+                                <input type="text" name="name" placeholder="Name" maxlength="20" required>
                             </div>
                             <div>
                                 <h3>Description</h3>
-                                <textarea name="description" maxlength="90" style="width: 95%; height: 20%; border-radius: 8px; resize: none;" id="new-pizza-description" placeholder="Set a small message for customers to understand your creation"></textarea>
+                                <textarea name="description" maxlength="90" style="width: 95%; height: 20%; border-radius: 8px; resize: none;" id="new-pizza-description" placeholder="Set a small message for customers to understand your creation" required></textarea>
                             </div>
                         </div>
                     </div>
