--- a/public/styles.css
+++ b/public/styles.css
@@ -357,7 +357,7 @@ div > input, select {
     padding-top: 10px;
     text-align: center;
 }
-.available-topping {
+.available-topping, .available-topping-update {
     border: 1px dashed #bc1a1f;
     background-color: #870d51;
     max-width: 8%;
@@ -366,7 +366,7 @@ div > input, select {
     margin: 3px;
     padding: 3px;
 }
-.available-topping:hover{
+.available-topping:hover, .available-topping-update:hover{
     color: #13ab08;
     cursor: pointer;
 }
