--- a/views/chefdashboard.ejs
+++ b/views/chefdashboard.ejs
@@ -6,11 +6,9 @@
         <div style="text-align: center; width: 40%; margin: auto;">
             <h2 style="color: #13ab08; margin: 20px 40px;" >Welcome, Chef <%= user.fname %> <%= user.lname %></h2>
         </div>
-        
         <div id="pizza-view-container">
             <div id="pizza-view-control">
                 <div id="pizza-list-wrapper">
-                    <div class="button" style="margin: 10px auto;" onclick="displayNewPizza()">Create a Pizza</div>
                     <% pizzas.map(pizza => { %>
                         <div class="pizza-list-item-wrapper" onclick="displayUpdatePizza(this)"> 
                             <div class="pizza-list-item-image">
@@ -110,11 +108,13 @@
                     </div>
                 </form>
             </div>
-            <form action="/create/delete-pizza" id="delete-button" method="POST">
+        </div>
+        <div id="pizza-view-header">
+            <button onclick="displayNewPizza()">Create Pizza</button>
+            <form action="/create/delete-pizza" id="pizza-header-form" method="POST">
                 <input type="hidden" name="id">
-                <button class="button">Delete this Pizza</button>
+                <button type="submit" id="delete-button" disabled>Delete Pizza</button>
             </form>
         </div>
-        
     </body>
 </html>
