--- a/public/styles.css
+++ b/public/styles.css
@@ -372,8 +372,13 @@ div > input, select {
     display: grid;
     grid-template-columns: .8fr 1.2fr;
 }
+#pizza-update-photo {
+    max-width: 100%;
+    max-height: 100%;
+}
 #pizza-update-photo>img {
     max-width: 100%;
+    max-height: 100%;
 }
 #pizza-update-toppings {
     height: 30%;
