--- a/views/chefdashboard.ejs
+++ b/views/chefdashboard.ejs
@@ -48,7 +48,7 @@
                 <form id="pizza-update-wrapper" style="display: none;">
                     <div id="pizza-update-metadata">
                         <div id="pizza-update-photo">
-                            <img src="./images/pizza-pep-veg.webp" alt="">
+                            <img id="update-pizza-img">
                             <div style="margin: auto; width: 80%; text-align: center;">
                             </div>
                         </div>
