Add hyphens for toppings with spaces.
Spaces in topping names caused errors. This fixes that issue.

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -46,7 +46,7 @@
                         </div>
                         <form action="/create/delete" method="POST"class="action-button">
                             <input type="hidden" name="id" value=<%= e.id %>>
-                            <button type="submit" style="background: none; border: none; color: rgb(254, 58, 58)"><i class="fa-solid fa-trash-can"></i></button>
+                            <button type="submit" style="background: none; border: none; color: white; font-size: 1rem;"><i class="fa-solid fa-trash-can"></i></button>
                         </form>
                     </div>
                 </div>
