--- a/views/chefdashboard.ejs
+++ b/views/chefdashboard.ejs
@@ -72,7 +72,7 @@
                         <% }) %>
                     </div>
                     <div id="pizza-update-actions">                     
-                        <button class="button" style="width:fit-content">Submit Changes</button>
+                        <button class="button" style="width:fit-content" disabled>Submit Changes</button>
                     </div>
                 </form>
                 <!-- BEGIN NEW PIZZA CONTAINER  -->
