--- a/public/styles.css
+++ b/public/styles.css
@@ -338,13 +338,15 @@ div > input, select {
     margin: 3%;
 }
 .pizza-list-item-image {
-    max-width: 100%;
+    margin: auto;
+    max-width: 80%;
     padding-top: 4%;
     align-items: center;
+    text-align: center;
 }
 .pizza-list-item-image > img {
-    height: 100%;
-    max-width: 80%;
+    max-width: 100%;
+    margin: auto;
 }
 /* Max Chars: 90 for description, 21 for title (move price to next line), 10 for a topping*/
 .pizza-list-item-data {
