--- a/public/styles.css
+++ b/public/styles.css
@@ -338,14 +338,17 @@ div > input, select {
     margin: 3%;
 }
 .pizza-list-item-image {
+    height: 8em;
     margin: auto;
     max-width: 80%;
     padding-top: 4%;
     align-items: center;
     text-align: center;
+    border-radius: 8px;
+    background-color: rgba(0,0,0,0.4);
 }
 .pizza-list-item-image > img {
-    max-width: 100%;
+    max-width: 90%;
     margin: auto;
 }
 /* Max Chars: 90 for description, 21 for title (move price to next line), 10 for a topping*/
@@ -381,14 +384,19 @@ div > input, select {
 }
 #pizza-update-photo {
     display: flex;
-    max-width: 100%;
-    text-align: center;
+    max-width: 90%;
+    background-color: rgba(0,0,0,0.4);
+    border-radius: 8px;
+    
 }
 #pizza-update-photo>img {
     max-width: 20em;
+    margin: auto;
 }
 #pizza-update-toppings {
     height: 30%;
+    border-radius: 8px;
+    background-color: rgba(0,0,0,0.4);
 }
 #pizza-update-actions, #pizza-new-actions {
     margin: auto;
