Adjusting toppings routes and adding comments/docs

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -76,6 +76,7 @@
                             <option value="Cheese">Cheese</option>
                             <option value="Veggies">Veggies</option>
                             <option value="Meat">Meat</option>
+                            <option value="Garnish">Garnish</option>
                         </select>
                         <div>
                             <label for="price">Price</label>
@@ -87,7 +88,7 @@
                     </form>
             </div>
         </div>
-        <!-- The below is for deleting a topping that is linked to pizzas. -->
+        <!-- The below is for deleting a topping, depending if it's linked to pizzas it says different things (manipulated in the javascript) -->
         <div class="modal-container-delete" style="display: none">
             <div class="modal-content-delete">
                 <div class="back-button" onclick="closeModal()">
