updating toppings now uses id as parameter

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -65,7 +65,7 @@
                     <i class="fa-solid fa-circle-xmark"></i>
                 </div>
                     <h2>Update Topping</h2>
-                    <form action="/create/update" method="POST" id="update-topping">
+                    <form action="/create/update/" method="POST" id="update-topping">
                         <div>
                             <label for="name">Name</label>
                             <input name="name" type="text" id="update-topping-name" required>
