update route for pizzas includes id as param

--- a/views/chefdashboard.ejs
+++ b/views/chefdashboard.ejs
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <!-- BEGIN RIGHT SIDE OF PAGE, STARTING WITH UPDATE PIZZA VIEW -->
-                <form action="/create/update-pizza" method="POST" id="pizza-update-wrapper" style="display: none;">
+                <form action="/create/update-pizza/" method="POST" id="pizza-update-wrapper" style="display: none;">
                     <div id="pizza-update-metadata">
                         <div id="pizza-update-photo">
                             <img id="update-pizza-img">
