Styling of Pizza updates

--- a/views/chefdashboard.ejs
+++ b/views/chefdashboard.ejs
@@ -57,7 +57,7 @@
                             </div>
                             <div>
                                 <h3>Update Description</h3>
-                                <textarea name="description" maxlength="90" style="width: 95%; height: 20%; border-radius: 8px; resize: none;" id="update-pizza-description"></textarea>
+                                <textarea name="description" maxlength="90" id="update-pizza-description"></textarea>
                             </div>
                         </div>
                     </div>
