--- a/public/styles.css
+++ b/public/styles.css
@@ -18,6 +18,10 @@ input[type=number] {
 
 textarea {
     font-family: 'Exo 2', sans-serif;
+    width: 70%;
+    height: 20%; 
+    border-radius: 8px; 
+    resize: none;
 }
 
 h2, h3 {
@@ -388,6 +392,12 @@ div > input, select {
 #pizza-update-metadata {
     display: grid;
     grid-template-columns: .8fr 1.2fr;
+    text-align: center;
+    border: 1px solid #bc1a1f;
+    box-shadow: 0px 5px 5px #1e1f4e;
+    border-radius: 10px;
+    background-color: #262751;
+    margin: 3% auto;
 }
 #pizza-update-photo {
     display: flex;
@@ -400,10 +410,20 @@ div > input, select {
     max-width: 20em;
     margin: auto;
 }
+#pizza-update-forminputs {
+    padding: 2rem;
+}
+#pizza-update-forminputs > div > h3, #pizza-update-forminputs > div > input {
+    display: inline;
+    margin: 5% auto;
+}
 #pizza-update-toppings {
     height: 30%;
-    border-radius: 8px;
-    background-color: rgba(0,0,0,0.4);
+    border-radius: 10px;
+    background-color: #262751;
+    border: 1px solid #bc1a1f;
+    box-shadow: 0px 5px 5px #1e1f4e;
+    text-align: center;
 }
 #pizza-update-actions, #pizza-new-actions {
     margin: auto;
