styling updates for pizza dashboard

--- a/views/chefdashboard.ejs
+++ b/views/chefdashboard.ejs
@@ -86,7 +86,7 @@
                             </div>
                             <div>
                                 <h3>Description</h3>
-                                <textarea name="description" maxlength="90" style="width: 95%; height: 20%; border-radius: 8px; resize: none;" id="new-pizza-description" placeholder="Set a small message for customers to understand your creation" required></textarea>
+                                <textarea name="description" maxlength="90" id="new-pizza-description" placeholder="Set a small message for customers to understand your creation" required></textarea>
                             </div>
                         </div>
                     </div>
