--- a/public/styles.css
+++ b/public/styles.css
@@ -401,7 +401,7 @@ div > input, select {
 }
 #pizza-update-photo {
     display: flex;
-    max-width: 90%;
+    max-width: 100%;
     background-color: rgba(0,0,0,0.4);
     border-radius: 8px;
     
@@ -410,15 +410,21 @@ div > input, select {
     max-width: 20em;
     margin: auto;
 }
-#pizza-update-forminputs {
+#pizza-update-forminputs, #pizza-new-forminputs {
     padding: 2rem;
+    border-radius: 10px;
+    background-color: #262751;
+    border: 1px solid #bc1a1f;
+    box-shadow: 0px 5px 5px #1e1f4e;
+    text-align: left;
 }
-#pizza-update-forminputs > div > h3, #pizza-update-forminputs > div > input {
+#pizza-update-forminputs > div > h3, #pizza-update-forminputs > div > input, #pizza-new-forminputs > div > h3, #pizza-new-forminputs > div > input {
     display: inline;
-    margin: 5% auto;
+    margin: 3% auto;
 }
-#pizza-update-toppings {
+#pizza-update-toppings, #pizza-new-toppings {
     height: 30%;
+    margin: 3rem auto;
     border-radius: 10px;
     background-color: #262751;
     border: 1px solid #bc1a1f;
