--- a/public/styles.css
+++ b/public/styles.css
@@ -407,7 +407,7 @@ div > input, select {
     
 }
 #pizza-update-photo>img {
-    max-width: 20em;
+    max-width: 70%;
     margin: auto;
 }
 #pizza-update-forminputs, #pizza-new-forminputs {
